# competitive_intelligence_system

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: 001_init.sql  002_domain_registry.sql  run_migrations.py
src/cis/config/: settings.py
src/cis/storage/: postgres_client.py
tests/: test_config.py  test_migration.py  test_postgres_client.py
